Source/K8s/Kafka/deployments.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zookeeper
  namespace: ocfev
spec:
  template:
    metadata:
      labels:
        app: kafka
        name: zookeeper
    spec:
      containers:
      - name: zoo1
        image: digitalwonderland/zookeeper
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2181
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka
  namespace: ocfev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
        name: kafka
        id: "1"
    spec:
      containers:
      - name: kafka
        image: wurstmeister/kafka
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9092
        volumeMounts:
        - mountPath: "/kafka"
          name: datadir
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: kafka
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: kafka-manager
  namespace: ocfev
spec:
  template:
    metadata:
      labels:
        app: kafka
        name: kafka-manager
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: kafka-manager
        image: sheepkiller/kafka-manager
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
